fixed background flicker

--- a/sigadesign/src/components/siga-button/siga-button.css
+++ b/sigadesign/src/components/siga-button/siga-button.css
@@ -33,7 +33,7 @@
   line-height: 17px;
   letter-spacing: 0.01em;
 
-  transition: background 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease;
   color: inherit;
 }
 
@@ -56,7 +56,8 @@
   color: var(--color-white);
 }
 .btn--blue:hover:not(.btn--disabled) {
-  background: linear-gradient(90deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+  background-image: linear-gradient(90deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+  background-color: var(--color-primary-dark);
 }
 
 .btn--grey {
@@ -64,7 +65,8 @@
   color: var(--color-primary-text);
 }
 .btn--grey:hover:not(.btn--disabled) {
-  background: linear-gradient(90deg, var(--color-grey-light) -1.66%, var(--color-grey-hover) 100%);
+  background-image: linear-gradient(90deg, var(--color-grey-light) -1.66%, var(--color-grey-hover) 100%);
+  background-color: var(--color-grey-hover);
 }
 
 .btn--dark {
@@ -72,7 +74,8 @@
   color: var(--color-white);
 }
 .btn--dark:hover:not(.btn--disabled) {
-  background: linear-gradient(90deg, var(--color-dark) 0%, var(--color-dark-hover) 100%);
+  background-image: linear-gradient(90deg, var(--color-dark) 0%, var(--color-dark-hover) 100%);
+  background-color: var(--color-dark-hover);
 }
 
 .btn--white {
@@ -80,7 +83,8 @@
   color: var(--color-primary-text);
 }
 .btn--white:hover:not(.btn--disabled) {
-  background: linear-gradient(90deg, var(--color-white) 0%, var(--color-primary-soft) 98.02%);
+  background-image: linear-gradient(90deg, var(--color-white) 0%, var(--color-primary-soft) 100%);
+  background-color: var(--color-primary-soft);
 }
 
 /* === DISABLED STATE === */
